# IS_computer_graphics

./: .gitignore
basic-a1/: CMakeLists.txt  build.sh
basic-a1/include/: bezier_curve.hpp  bone.hpp  draggable_component.hpp  kinematics_app.hpp
basic-a1/src/: bezier_curve.cpp  bone.cpp  drag_manager.cpp  kinematics_app.cpp  main.cpp
basic-a1/test/: a.out  shared_ptr.cpp
basic1/: CMakeLists.txt
basic1/include/: app.hpp  bezier_curve.hpp  coons_surface.hpp  drag_manager.hpp  draggable_component.hpp  draggable_point_component.hpp  iscg_app.hpp
basic1/src/: bezier_curve.cpp  coons_surface.cpp  drag_manager.cpp  draggable_component.cpp  draggable_point_component.cpp  iscg_app.cpp  main.cpp
